--- a/index.html
+++ b/index.html
@@ -13,10 +13,53 @@
             <img src="logo.png" alt="Genius Books Logo">
             <span>Genius Books</span>
         </div>
-        <div class="links">
+        <div class="desktop-links">
             <a href="#">Products</a>
+            <hr>
             <a href="#">Contact Us</a>
         </div>
+        <div class="menu-toggle">
+            <button id="toggle-btn" aria-label="Toggle navigation">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+        </div>
     </div>
+
+    <div class="mobile-links">
+        <a href="#">
+            Products
+            <span class="arrow">→</span>
+        </a>
+        <a href="#">
+            Contact Us
+            <span class="arrow">→</span>
+        </a>
+    </div>
+
+    <div class="hero-section section">
+        <div class="hero-text">
+            <h1>Discover high-quality educational materials designed to ignite a passion for learning and support academic success.</h1>
+        </div>
+        <div class="hero-image">
+            <img src="heroimage.jpg" alt="Educational image">
+        </div>
+    </div>
+
+    <div class="who-we-are-section section">
+        <h2>Who we are</h2>
+        <p>We are a distinguished name in educational publishing, boasting a decade of expertise.</p>
+        <p>We take pride in our longstanding relationships with esteemed educational institutions across Chennai and Tamil Nadu, where our materials are trusted to enhance learning experiences and outcomes.</p>
+        <p>Our expert team established 111 titles across all subjects in our portfolio.</p>
+    </div>
+
+    <div class="mission-section section">
+        <h2>Our Mission</h2>
+        <p>We remain dedicated to empower students and educators alike with exceptional resources tailored to meet the demand of modern education.</p>
+        <p>With a focus on innovative content and exceptional design, our books aim to foster a love of learning and help students achieve their full potential.</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
