--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="mobile-links">
+    <div class="mobile-links" id="mobile-links">
         <a href="#products">
             Products
             <span class="arrow">→</span>
