--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genius Books</title>
+    <title>Products|Genius Books</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="productstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
             <span>Genius Books</span>
         </div>
         <div class="desktop-links">
-            <a href="#products">Home</a>
+            <a href="index.html">Home</a>
             <hr>
             <a href="#contact-us">Contact Us</a>
         </div>
@@ -29,8 +29,8 @@
     </div>
 
     <div class="mobile-links" id="mobile-links">
-        <a href="#products">
-            Products
+        <a href="index.html">
+            Home
             <span class="arrow">→</span>
         </a>
         <a href="#contact-us">
@@ -43,22 +43,19 @@
         <h2>Our Best Sellers</h2>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" data-gradient="linear-gradient(to right, #ff7e5f, #feb47b)">
+                <div class="swiper-slide">
                     <img src="book wrapper/chikku bukku rail.png" alt="Book 1">
                 </div>
-                <div class="swiper-slide" data-gradient="linear-gradient(to right, #6a11cb, #2575fc)">
+                <div class="swiper-slide">
                     <img src="book wrapper/Screenshot 2024-07-03 180746.png" alt="Book 2">
                 </div>
-                <div class="swiper-slide" data-gradient="linear-gradient(to right, #ff512f, #dd2476)">
+                <div class="swiper-slide">
                     <img src="book wrapper/Screenshot 2024-07-03 181347.png" alt="Book 3">
                 </div>
-                <div class="swiper-slide" data-gradient="linear-gradient(to right, #56ab2f, #a8e063)">
+                <div class="swiper-slide">
                     <img src="book wrapper/young artist class 4.png" alt="Book 4">
                 </div>
             </div>
-            <!-- Add Pagination -->
-            
-            <!-- Add Arrows -->
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
@@ -66,6 +63,7 @@
     </div>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/node-vibrant/3.1.6/vibrant.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
