--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span>Genius Books</span>
         </div>
         <div class="desktop-links">
-            <a href="products.html" id="desktop-products-link">Products</a>
+            <a href="Products.html" id="desktop-products-link">Products</a>
             <hr>
             <a href="#contact-us">Contact Us</a>
         </div>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="mobile-links" id="mobile-links">
-        <a href="products.html" id="mobile-products-link">
+        <a href="Products.html" id="mobile-products-link">
             Products
             <span class="arrow">→</span>
         </a>
@@ -66,7 +66,7 @@
         <br>
     </div>
 
-    <button class="explore-btn" onclick="window.location.href='products.html'">Explore</button>
+    <button class="explore-btn" onclick="window.location.href='Products.html'">Explore</button>
 
     <!-- Contact Us Section -->
     <div id="contact-us" class="contact-us-section section">
