--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products|Genius Books</title>
+    <title>Products | Genius Books</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="productstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -29,14 +29,8 @@
     </div>
 
     <div class="mobile-links" id="mobile-links">
-        <a href="index.html">
-            Home
-            <span class="arrow">→</span>
-        </a>
-        <a href="#contact-us">
-            Contact Us
-            <span class="arrow">→</span>
-        </a>
+        <a href="index.html">Home <span class="arrow">→</span></a>
+        <a href="#contact-us">Contact Us <span class="arrow">→</span></a>
     </div>
 
     <div class="best-sellers">
@@ -58,9 +52,29 @@
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
     </div>
+
+    <div class="discover-by-subjects">
+        <h2>Discover by Subjects</h2>
+        <ul>
+            <a href="#"><li>Term Book Series</li></a>
+            <hr>
+            <a href="#"><li>Tamil Book Series</li></a>
+            <hr>
+            <a href="#"><li>English Book Series</li></a>
+            <hr>
+            <a href="#"><li>Hindi Book Series</li></a>
+            <hr>
+            <a href="#"><li>Work Book Series</li></a>
+            <hr>
+            <a href="#"><li>Art & Craft Series</li></a>
+            <hr>
+            <a href="#"><li>Guide Series</li></a>
+        </ul>
+    </div>
+    
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/node-vibrant/3.1.6/vibrant.min.js"></script>
