--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genius Books</title>
     <link rel="stylesheet" href="style.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <span>Genius Books</span>
         </div>
         <div class="desktop-links">
-            <a href="products.html" id="desktop-products-link">Products</a>
+            <a href="Products.html" id="desktop-products-link">Products</a>
             <hr>
             <a href="#contact-us">Contact Us</a>
         </div>
@@ -28,7 +29,7 @@
     </div>
 
     <div class="mobile-links" id="mobile-links">
-        <a href="products.html" id="mobile-products-link">
+        <a href="Products.html" id="mobile-products-link">
             Products
             <span class="arrow">→</span>
         </a>
